[project]
name = "Liquid-timeinterpolation"
description = "LiquidTime is a simple yet powerful frame interpolation node for ComfyUI. Just input your sequence and desired frame count - the node handles all complex calculations and generates smooth in-between frames for you. A must-have tool for AI animation and video creation that lets you shape time like liquid."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "pillow>=9.0.0",
    "tqdm>=4.65.0"
]

[project.urls]
Repository = "https://github.com/lazniak/LiquidTime-Interpolation"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "pablogfx"
DisplayName = "LiquidTime - by PabloGFX"
Icon = ""
